# codewars

./: .gitignore  CMakeLists.txt  README.md  StringEnds.sh  lib.py  new-project.py  pyrightconfig.json
Alphabet/: README.md  alphabet.cpp  main.cpp
Atoi/: README.md  atoi.cpp  main.cpp
Baker/: README.md  baker.cpp  main.cpp
BitCount/: README.md  bitCount.cpp  main.cpp
CamelCase/: README.md  camelCase.cpp  main.cpp
CountDuplicates/: README.md  countDuplicates.cpp  main.cpp
GetPINs/: README.md  getPINs.cpp  main.cpp
MoveZeros/: README.md  main.cpp  moveZeros.cpp
Persistance/: README.md  main.cpp  persistance.cpp
Smileys/: README.md  main.cpp  smileys.cpp
StringEnds/: README.md  main.cpp  stringEnds.cpp
SumInter/: README.md  main.cpp  sumInter.cpp
UniqueOrder/: README.md  main.cpp  uniqueOrder.cpp
example/: README.md  example.cpp  example.sh  main.cpp  mainVector.cpp
scripts/: Alphabet.sh  Atoi.sh  Baker.sh  BitCount.sh  CamelCase.sh  CountDuplicates.sh  GetPINs.sh  MoveZeros.sh  Persistance.sh  Smileys.sh  SumInter.sh  UniqueOrder.sh
